----------------------------------------------------------------------
Mon Jan  3 14:39:48 2005                        Michael Jennings (mej)

Spec file fixes and cleanups.

Re-indented E-Power.c.

Started a new ChangeLog using mezz format since I'm the only one who
messes with this any more.
----------------------------------------------------------------------
Wed Jan  5 15:12:34 2005                        Michael Jennings (mej)

Oops, wrong imlib. :)
----------------------------------------------------------------------